# BankingApp

./: open_account.html
backend/: .gitignore  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py  vxbank.db
backend/app/routes/: accounts.py  users.py
frontrend/: index.html  open_account.html  script.js
styles/: main.css
